--- a/doc-project-mapping-manual.json
+++ b/doc-project-mapping-manual.json
@@ -62,7 +62,9 @@
     "Personal > House": "House Purchase",
     "Work > Engineering Excellence": "Engineering Excellence",
     "Work > Meetings and Discussions": null,
-    "Jim Work > Research": null
+    "Jim Work > Research": null,
+    "Professional > Business Analysis > AI Enabled Systems": null,
+    "Work > Project Initiatives > Project Work Entities": null
   },
   "craftDocuments": {
     "Work Task Inbox": "Vista Work",
